maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:53: error: not found: value getIndcation
          if (getIndcation(i(0), i(1)) == 9999) {
              ^